--- a/4 - Interpretation.ipynb
+++ b/4 - Interpretation.ipynb
@@ -197,20 +197,13 @@
    "source": [
     "Problem is that a lot of signal is lost because we don't look into keywords and actual content of the article. There's only so much we can extract from article length, etc."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:metis] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-metis-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
