--- a/2 - Feature Engineering.ipynb
+++ b/2 - Feature Engineering.ipynb
@@ -48404,8 +48404,7 @@
     "            color='red'\n",
     "           );\n",
     "plt.xlabel('Number of digits in the article');\n",
-    "plt.ylabel('Log(claps)');\n",
-    "plt.savefig('img/num_digits_article.png')"
+    "plt.ylabel('Log(claps)');"
    ]
   },
   {
