--- a/2 - Feature Engineering.ipynb
+++ b/2 - Feature Engineering.ipynb
@@ -47060,7 +47060,7 @@
     "plt.figure(figsize=(8,5))\n",
     "sns.scatterplot(X_train['article_grade_lvl'], log(y_train))\n",
     "plt.xlabel('Readability grade level');\n",
-    "plt.ylabel('Log(claps)');\n"
+    "plt.ylabel('Log(claps)');"
    ]
   },
   {
